# etale

./: .gitignore  Cargo.toml  README.md  book.toml
.cargo/: config.toml
.github/workflows/: clippy.yml  format.yml  test.yml
benches/: commit_bench.rs  ntt_bench.rs  trace_bench.rs
book/src/: introduction.md
book/src/usage/: challenge-sampling.md  partially-splitting.md  trace-computation.md  trace-pairing.md
docs/: doc-principle.md
examples/: fiat_shamir_demo.rs
src/: lib.rs  main.rs
src/commit/: ajtai.rs  mod.rs
src/lattice/: decompose.rs  matrix.rs  mod.rs  modular.rs  ntt.rs  pairing.rs  params.rs  ring.rs  ring_mul.rs  splitting.rs  trace.rs  vector.rs
src/zk/: fiat_shamir.rs
