[package]
name = "etale"
version = "0.1.0"
edition = "2021"
description = "A general-purpose library for lattice-based cryptography, including polynomial commitments and zero-knowledge proof support"
authors = ["Julius Zhang <juliuszh@alumni.stanford.edu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JuI3s/etale"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
log = "0.4"
ark-ff = "0.4"
itertools = "0.12"

[dev-dependencies]
rand_chacha = "0.3"
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "trace_bench"
harness = false

[[bench]]
name = "ntt_bench"
harness = false

[lints.rust]
warnings = "deny"

[lints.clippy]
# Lint groups (set priority with .priority to avoid conflicts)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Allow common patterns in math/crypto code
many_single_char_names = "allow"  # f, g, d, q, n, m are standard math notation
doc_markdown = "allow"            # backticks in docs not critical
must_use_candidate = "allow"      # too noisy for now
missing_panics_doc = "allow"      # debug_assert panics are intentional

# Allow intentional patterns in modular arithmetic
inline_always = "allow"           # hot-path functions need this
cast_possible_truncation = "allow" # modular reduction is intentional
cast_lossless = "allow"           # u64->u128 is fine, explicit for clarity
cast_sign_loss = "allow"          # we handle signs explicitly in crypto code
cast_possible_wrap = "allow"      # we handle signs explicitly in crypto code
cast_precision_loss = "allow"     # f64 for display/stats is fine
return_self_not_must_use = "allow" # builder pattern methods

