[package]
name = "etale"
version = "0.1.0"
edition = "2021"
description = "A general-purpose library for lattice-based cryptography, including polynomial commitments and zero-knowledge proof support"
authors = ["Julius Zhang <juliuszh@alumni.stanford.edu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JuI3s/etale"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
log = "0.4"
ark-ff = "0.4"
itertools = "0.12"

[dev-dependencies]
rand_chacha = "0.3"
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "trace_bench"
harness = false

[[bench]]
name = "ntt_bench"
harness = false

[lints.rust]
warnings = "deny"

[lints.clippy]
# Lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# ============================================================================
# Pedantic allows - common patterns in math/crypto code
# ============================================================================

# Math notation uses single-char names (f, g, d, q, n, m)
many_single_char_names = "allow"

# Documentation style (not critical)
doc_markdown = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"

# Casting - intentional in modular arithmetic
inline_always = "allow"
cast_possible_truncation = "allow"
cast_lossless = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"

